--- a/chat_app/pubspec.yaml
+++ b/chat_app/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  google_fonts: ^6.2.1
+  logger: ^2.5.0
+  flutter_signin_button: ^2.0.0
+  chat_bubbles: ^1.7.0
 
 dev_dependencies:
   flutter_test:
